chua lam = cong don , ()

--- a/Calc_LeQuocBinh/frmBinh.resx
+++ b/Calc_LeQuocBinh/frmBinh.resx
@@ -137,6 +137,15 @@
         TkSuQmCC
 </value>
   </data>
+  <data name="BtnClearHistory.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAALhJREFUSEvt
+        lu0JgDAMRDuKoziKo7iJoziaJj8CpdT29QOr6IMDOeNFSlvifhIsojUjrenKLjqgtLYLkyjWIKVZ1IyG
+        kEBah7mlsS5ruGE2kQXqc/jelKvT7Ev8v+6t5CoMa+xjR6jmeLR8+6zGdnv5N1TM6964xcPQQOphaCD1
+        MDSQehgaSD0MDaQehgZSD0MDqYehgdTDxD4ednNR3t24RTqJFFMzXYYqnr0MbW6bp1TJGetrOHcCDKYG
+        SnlsQKcAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
